[gd_scene load_steps=15 format=3 uid="uid://dw56ny0ssie3d"]

[ext_resource type="Script" path="res://src/scripts/purchase.gd" id="1_53vja"]
[ext_resource type="Texture2D" uid="uid://ci0dt4why4n6l" path="res://assets/bg/tablet_bg.png" id="1_hjbwv"]
[ext_resource type="PackedScene" uid="uid://bprqmeqewkl7i" path="res://src/scenes/game_elements/hud.tscn" id="2_5jw3k"]
[ext_resource type="Theme" uid="uid://blt6xo6vlubib" path="res://assets/themes/next_button.tres" id="3_h5nce"]
[ext_resource type="Theme" uid="uid://cuxkfo2hoq3nw" path="res://assets/themes/big_button.tres" id="4_kn2qy"]
[ext_resource type="Theme" uid="uid://dc7y8rpii2h2f" path="res://assets/themes/back_button.tres" id="4_l56u4"]
[ext_resource type="PackedScene" uid="uid://bmic4yn75i1yx" path="res://src/scenes/game_elements/ingredient_item.tscn" id="4_twdus"]
[ext_resource type="StyleBox" uid="uid://dxyxhi4usme83" path="res://assets/themes/panel_for_label.tres" id="5_2vpum"]
[ext_resource type="Theme" uid="uid://ckw0hrsxnk1eq" path="res://assets/themes/close_button.tres" id="6_4w510"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kexi0"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wh6fn"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_right = 3
border_color = Color(0.792157, 0.678431, 0.682353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8hfbg"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_right = 3
border_color = Color(0.792157, 0.678431, 0.682353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qerar"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_color = Color(0.792157, 0.678431, 0.682353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ybuaa"]
bg_color = Color(1, 1, 1, 0.101961)

[node name="Purchase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_53vja")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_hjbwv")
expand_mode = 1

[node name="Hud" parent="." instance=ExtResource("2_5jw3k")]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 94
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 102
theme_override_constants/margin_bottom = 57

[node name="PanelBg" type="Panel" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kexi0")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 55
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 90

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Panel" type="Panel" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wh6fn")

[node name="IngredientItem" parent="MarginContainer/MarginContainer/HBoxContainer/Panel" instance=ExtResource("4_twdus")]
layout_mode = 1

[node name="Panel2" type="Panel" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8hfbg")

[node name="IngredientItem" parent="MarginContainer/MarginContainer/HBoxContainer/Panel2" instance=ExtResource("4_twdus")]
layout_mode = 1

[node name="Panel3" type="Panel" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_qerar")

[node name="IngredientItem" parent="MarginContainer/MarginContainer/HBoxContainer/Panel3" instance=ExtResource("4_twdus")]
layout_mode = 1

[node name="Panel_ft" type="Panel" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ybuaa")

[node name="TabletHud" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
theme_override_constants/separation = 10

[node name="Back" type="Button" parent="MarginContainer/TabletHud"]
custom_minimum_size = Vector2(85, 68)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8
theme = ExtResource("4_l56u4")

[node name="AmountPurchase" type="Panel" parent="MarginContainer/TabletHud"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/panel = ExtResource("5_2vpum")

[node name="Amout" type="Label" parent="MarginContainer/TabletHud/AmountPurchase"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="Buy" type="Button" parent="MarginContainer/TabletHud"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_kn2qy")
theme_override_font_sizes/font_size = 40
text = "Купить"

[node name="Next" type="Button" parent="MarginContainer/TabletHud"]
custom_minimum_size = Vector2(85, 68)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
theme = ExtResource("3_h5nce")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 105
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Close" type="Button" parent="MarginContainer2"]
custom_minimum_size = Vector2(85, 72)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("6_4w510")

[connection signal="clear_ingredients" from="." to="MarginContainer/MarginContainer/HBoxContainer/Panel/IngredientItem" method="_on_purchase_clear_ingredients"]
[connection signal="clear_ingredients" from="." to="MarginContainer/MarginContainer/HBoxContainer/Panel2/IngredientItem" method="_on_purchase_clear_ingredients"]
[connection signal="clear_ingredients" from="." to="MarginContainer/MarginContainer/HBoxContainer/Panel3/IngredientItem" method="_on_purchase_clear_ingredients"]
[connection signal="ingredient_item1_visible" from="." to="MarginContainer/MarginContainer/HBoxContainer/Panel/IngredientItem" method="_on_purchase_ingredient_item_visible"]
[connection signal="ingredient_item2_visible" from="." to="MarginContainer/MarginContainer/HBoxContainer/Panel2/IngredientItem" method="_on_purchase_ingredient_item_visible"]
[connection signal="ingredient_item3_visible" from="." to="MarginContainer/MarginContainer/HBoxContainer/Panel3/IngredientItem" method="_on_purchase_ingredient_item_visible"]
